created first rest api

--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+admin/.env
 .venv
 env/
 venv/
@@ -233,3 +233,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+*.sqlite3
+media/
+*.pyc
+*.db
+*.pid
+.idea
+.dbdata
